--- a/doc/slides.tex
+++ b/doc/slides.tex
@@ -230,7 +230,7 @@ poids: \url{http://en.wikipedia.org/wiki/Vector_space_model}
 
 \begin{frame}[fragile]
 	%\frametitle{Aim}
-	\begin{block}{Mapping complèxe}
+	\begin{block}{Mapping complexe}
 		\begin{lstlisting}
  "authors" : {
      "properties" : {
